<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/lato_black"
        android:paddingStart="30dp"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato_light"
        android:lineSpacingExtra="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/login_subtitle"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/main_input_style"
            android:fontFamily="@font/lato_regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/white"
            android:textColorHint="#3D3D4C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_email_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato_regular"
            android:text=""
            android:textColor="@color/alert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:background="@drawable/main_input_style"
                android:fontFamily="@font/lato_regular"
                android:hint="Clave"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                android:textColorHint="#3D3D4C"
                android:textCursorDrawable="@null"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/toggle_password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-52dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/show_password_icon" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_password_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato_regular"
            android:text=""
            android:textColor="@color/alert" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_regular"
                android:text="¿No tienes cuenta?"
                android:textColor="#3D3D4C"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/lato_regular"
                android:text="Regístrate"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <Button
            android:id="@+id/login_button"
            style="@style/main_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:text="@string/login_btn_text"
            android:textCursorDrawable="@null" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>