<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:id="@+id/main_activity_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:padding="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/menu_icon" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/avatar" />
        </LinearLayout>

        <TextView
            android:id="@+id/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_black"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Hola"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@id/main_activity_header" />

        <TextView
            android:id="@+id/greetings_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/lato_light"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="Estamos contigo siempre"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/greetings" />

        <RelativeLayout
            android:id="@+id/request_help_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/greetings_subtitle">

            <LinearLayout
                android:id="@+id/help_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_info_container"
                android:elevation="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_black"
                    android:letterSpacing="0.1"
                    android:text="Solicita ayuda"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lato_light"
                    android:letterSpacing="0.1"
                    android:text="Cuando quieras dentro de Caracas."
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_regular"
                        android:letterSpacing="0.1"
                        android:text="Llegamos en minutos"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/request_help_btn"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/help_info_container"
                android:layout_marginTop="30dp"
                android:text="@string/request_help_btn_text" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cancel_help_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:alpha="0"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/greetings_subtitle">

            <LinearLayout
                android:id="@+id/cancel_help_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_info_container"
                android:elevation="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:text="¡La ayuda ya viene en camino!"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/spongebob_run" />

                <Button
                    android:id="@+id/cancel_help_btn"
                    style="@style/main_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/cancel_help_btn_text" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/help_arrived_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:alpha="0"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/greetings_subtitle">

            <LinearLayout
                android:id="@+id/help_arrived_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_info_container"
                android:elevation="20dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_light"
                    android:text="¡La ayuda ha llegado!"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/spongebob_happy" />

                <Button
                    android:id="@+id/finish_help_btn"
                    style="@style/main_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:visibility="visible"
                    android:text="@string/finish_help_btn_text" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>